new method of getting resources like cards and such

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,11 @@ header {
 }
 
 
+.centerimage {
+  width: 500px;
+  height: 600px;
+}
+
 .clickable:hover {
   background-color: silver;
   cursor: pointer;
